# ShockingVRC

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  rustfmt.toml  tsconfig.json  vite.config.ts
src/: App.vue  style.css  svg.d.ts
src-cli/: Cargo.toml
src-cli/src/: main.rs
src-cli/src/commands/: add_zone_command.rs  clear_command.rs  help_command.rs  mod.rs  quit_command.rs
src-cli/src/engine/: cli_engine.rs  command.rs  command_registry.rs  mod.rs
src-core/: Cargo.toml
src-core/src/: input_zone.rs  lib.rs  zone_type.rs
src-core/src/ble/: mod.rs
src-core/src/cli/: config.rs  engine.rs
src-core/src/codec/: mod.rs
src-core/src/osc/: game_device.rs  mod.rs  scanner.rs  types.rs
src-core/src/protocol/: waveform.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/dglab/: Cargo.toml
src-tauri/crates/dglab/examples/: cli.rs  osc_scanner.rs
src-tauri/crates/dglab/src/: error.rs  lib.rs
src-tauri/crates/dglab/src/ble/: adapter.rs  constants.rs  device.rs  known_devices.rs  mod.rs
src-tauri/crates/dglab/src/cli/: config.rs  engine.rs  mod.rs
src-tauri/crates/dglab/src/codec/: mod.rs  sb64.rs
src-tauri/crates/dglab/src/dsp/: filter.rs  mod.rs  ukf.rs
src-tauri/crates/dglab/src/osc/: game_device.rs  mod.rs  oscquery.rs  scanner.rs  types.rs
src-tauri/crates/dglab/src/protocol/: mod.rs  waveform.rs  waveform_bf.rs
src-tauri/src/: main.rs
src/components/: BatteryBar.vue  BottomBar.vue  BottomBarButton.vue  EmergencyStopButton.vue  PowerMeter.vue  PowerSide.vue  PresetsButton.vue  SettingsButton.vue  TopBar.vue  TopBarDrag.vue  TopBarLogo.vue  WindowControls.vue
