[workspace]
members = [".", "crates/dglab"]

[package]
name = "shocking_vrc"
version = "0.1.0"
description = "A Tauri App"
authors = ["nullshii", "AmigoFPS"]
edition = "2021"

[lib]
name = "shocking_vrc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dglab = { path = "crates/dglab" }
