[package]
name = "shocking_vrc"
version = "0.1.0"
description = "A Tauri App"
authors = ["nullshii", "AmigoFPS"]
edition = "2021"

[lib]
name = "shocking_vrc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
shocking_vrc_core.workspace = true

tauri = { workspace = true }
tauri-plugin-opener = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
