[package]
name = "shocking_vrc"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "shocking_vrc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
shocking_vrc_core.workspace = true

tauri = { workspace = true }
tauri-plugin-opener = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
