[package]
name = "dglab"
version = "0.0.5"
edition = "2024"
authors = ["Amigo_FPS"]
description = "Rust library for DGLab Coyote V3 BLE device control"
license = "MIT"

[dependencies]
btleplug = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = "0.1"
uuid = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
base64 = "0.22"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
rand = "0.9"
